--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
-composer.phar
+# Composer
 /vendor/
+composer.lock
 
-# Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+# CSFixer
+.php-cs-fixer.cache
+
+# PHPUnit
+.phpunit.result.cache
+coverage.xml
+
+# PHPStan
+.phpstan.result.cache
+
+# JetBrains
+.idea
