--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "name": "prinsfrank/socrates",
-    "description": "ADRL Parser",
+    "description": "ADRL cli",
     "type": "library",
     "license": "MIT",
+    "bin": ["bin/socrates"],
     "autoload": {
         "psr-4": {
             "PrinsFrank\\Socrates\\": "src/"
@@ -14,7 +15,8 @@
         }
     },
     "require": {
-        "php": "^8.1 || ^8.2 || ^8.3"
+        "php": "^8.1 || ^8.2 || ^8.3",
+        "composer-runtime-api": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0",
