Initial premise and conclusion commands

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,11 @@
             "@unit",
             "@cs"
         ]
-    }
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../ADRL-Parser"
+        }
+    ]
 }
