--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "ADRL cli",
     "type": "library",
     "license": "MIT",
-    "bin": ["bin/socrates"],
+    "bin": ["bin/aristotle"],
     "autoload": {
         "psr-4": {
             "PrinsFrank\\Aristotle\\": "src/"
@@ -17,9 +17,9 @@
     "require": {
         "php": "^8.1 || ^8.2 || ^8.3",
         "composer-runtime-api": "^2.2",
-        "prinsfrank/adrl-parser": "dev-main",
         "symfony/console": "^7.0",
-        "prinsfrank/enums": "^1.2"
+        "prinsfrank/enums": "^1.2",
+        "prinsfrank/adrl-parser": "^0.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0",
@@ -35,11 +35,5 @@
             "@unit",
             "@cs"
         ]
-    },
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../ADRL-Parser"
-        }
-    ]
+    }
 }
